--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   border-radius: 10px;
   background-color: #454f5f;
   width: 520px;
-  height: 640px;
+  height: 650px;
   /* position: absolute; */
   margin: 10px auto;
 }
@@ -25,6 +25,8 @@ body {
   margin: 30px auto;
   padding: 10px 0;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .display {
@@ -34,6 +36,30 @@ body {
   margin: 10px auto 20px auto;
   padding: 10px 0;
   border-radius: 20px;
+  font-size: 1.8rem;
+  color: black;
+  text-align: end;
+  padding-right: 10px;
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+  justify-content: end;
+}
+
+.container > .clr-btn {
+  width: 100px;
+  height: 50px;
+  font-size: 1.2rem;
+  text-align: center;
+  border: 0;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  align-self: flex-end;
+}
+
+.clr-btn:hover {
+  cursor: pointer;
 }
 
 .btns-container {
@@ -47,6 +73,7 @@ body {
   justify-content: center;
   /* padding-top: 10px; */
   align-items: center;
+  margin-top: 10px;
 }
 
 .btns {
