--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body {
 }
 
 .display {
+  font-family: monospace;
   width: 430px;
   height: 100px;
   background-color: #aab9c5;
   margin: 10px auto 20px auto;
   padding: 10px 0;
   border-radius: 20px;
-  font-size: 1.8rem;
+  font-size: 2.7rem;
   color: black;
   text-align: end;
   padding-right: 10px;
