--- a/style.css
+++ b/style.css
@@ -14,12 +14,10 @@ body {
   background-color: #454f5f;
   width: 520px;
   height: 650px;
-  /* position: absolute; */
   margin: 10px auto;
 }
 
 .container {
-  /* border: 1px solid white; */
   width: 450px;
   height: 600px;
   margin: 30px auto;
@@ -35,9 +33,9 @@ body {
   height: 100px;
   background-color: #aab9c5;
   margin: 10px auto 20px auto;
-  padding: 10px 0;
+  padding: 0;
   border-radius: 20px;
-  font-size: 2.7rem;
+  font-size: 2.2rem;
   color: black;
   text-align: end;
   padding-right: 10px;
@@ -47,24 +45,36 @@ body {
   justify-content: end;
 }
 
-.container > .clr-btn {
-  width: 100px;
+.clear-back {
   height: 50px;
   font-size: 1.2rem;
   text-align: center;
   border: 0;
-  border-radius: 10px;
-  margin-right: 10px;
   margin-bottom: 10px;
-  align-self: flex-end;
+  display: flex;
+}
+
+.clear-back > .clr-btn {
+  border-radius: 10px;
+  width: 100px;
+  height: 50px;
+  margin-left: 10px;
+  margin-right: auto;
+  align-self: flex-start;
 }
 
 .clr-btn:hover {
   cursor: pointer;
 }
 
+.clear-back > .backspace {
+  width: 170px;
+  height: 50px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
 .btns-container {
-  /* background-color: white; */
   width: 100%;
   height: 450px;
   display: flex;
@@ -72,7 +82,6 @@ body {
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
-  /* padding-top: 10px; */
   align-items: center;
   margin-top: 10px;
 }
